# game

./: .gitmodules  CMakeLists.txt
include/game/: game.h
include/game/debug/: color.h  face.h  flags.h  text.h
include/game/input/: input.h
include/game/internal/: module.h
include/game/levels/: anim_preview.h  generic_level.h  load_scene.h  room_select.h  utils.h
include/game/logic/: bucket_processing.h  camera.h  collision_data.h  collision_utils.h  player.h
include/game/memory_tracking/: memory_tracking.h
include/game/rendering/: load_font.h  load_image.h  render.h  render_data.h
source/: game.c
source/debug/: color.c  face.c  flags.c  text.c
source/input/: input.c
source/levels/: anim_preview.c  generic_level.c  load_scene.c  room_select.c  utils.c
source/logic/: bucket_processing.c  camera.c  collision_utils.c  player.c
source/memory_tracking/: memory_tracking.cpp
source/rendering/: load_font.c  load_image.c  render.c  render_data.c
